--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
+    "@types/googlemaps": "^3.39.7",
     "class-transformer": "^0.2.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.4",
